<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mycapstonemade.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.favorite.FavoriteSportFragment"
        android:label="@string/favorite"
        tools:layout="@layout/favorite_sport_fragment" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.mycapstonemade.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@xml/setting" />

</navigation>